Add login & register On branch main Changes to be committed: 	modified:   config/config.json 	modified:   controllers/controller.auth.js 	modified:   models/player.js 	modified:   models/user.js 	modified:   package.json 	modified:   routes/games.js 	modified:   routes/index.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "author": "Yogi Saputro",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "git-push": "git add --all && git commit && git push origin main"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
